demo chapter 1 section A components/pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
-<header class="font-bold text-blue-800 text-xl sm:text-3xl"><slot /></header>
+<header class="font-bold text-blue-800 text-xl sm:text-3xl">
+ <slot />
+</header>
 <style scoped>
  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&&display=swap");
  header {
