--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,9 @@ export interface Props {
  dir: string;
  prev: any;
  next: any;
+ uselayout: boolean;
 }
-const { title, dir, prev, next } = Astro.props;
+const { title, dir, prev, next, uselayout } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -25,29 +26,38 @@ const { title, dir, prev, next } = Astro.props;
   <title>{title}</title>
  </head>
  <body>
-  <div class="flex w-screen h-screen">
-   <nav class="bg-blue-500 hidden md:flex md:w-1/4 lg:w-1/5">
-    <ChapterSideBar />
-   </nav>
-   <div class="h-full w-full md:w-3/4 lg:w-5/6 relative">
-    <nav class="w-100" id="top-navbar"><TopNavbar /></nav>
-    <div class="flex" id="main-content">
-     <main class="p-5 h-full w-full xl:w-5/6 overflow-auto">
-      <section>
-       <Breadcrumbs dir="w01/A" />
-       <slot />
-       <NavigatorButtons
-        next={next ? `/${dir}/${next}` : null}
-        prev={prev ? `/${dir}/${prev}` : null}
-       />
-      </section>
-     </main>
-     <aside class="bg-green-500 hidden xl:flex w-1/6 h-full">
-      <SectionAside />
-     </aside>
+  {
+   !uselayout ? (
+    <div class="flex w-screen h-screen">
+     <nav class="bg-blue-500 hidden md:flex md:w-1/4 lg:w-1/5">
+      <ChapterSideBar />
+     </nav>
+     <div class="h-full w-full md:w-3/4 lg:w-5/6 relative">
+      <nav class="w-100" id="top-navbar">
+       <TopNavbar />
+      </nav>
+      <div class="flex" id="main-content">
+       <main class="p-5 h-full w-full xl:w-5/6 overflow-auto">
+        <section class="flex flex-col space-y-7">
+         <slot />
+         <NavigatorButtons
+          next={next ? `/${dir}/${next}` : null}
+          prev={prev ? `/${dir}/${prev}` : null}
+         />
+        </section>
+       </main>
+       <aside class="bg-green-500 hidden xl:flex w-1/6 h-full">
+        <SectionAside />
+       </aside>
+      </div>
+     </div>
     </div>
-   </div>
-  </div>
+   ) : (
+    <div class="min-h-full">
+     <slot />
+    </div>
+   )
+  }
  </body>
 </html>
 
