--- a/src/pages/w01/A/A.astro
+++ b/src/pages/w01/A/A.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
 import Header from "../../../components/Header.astro";
+
+const { no_layout } = Astro.props;
 ---
 
-<Layout title="Week 1" dir="w01/A" prev={null} next="B">
+<Layout title="Week 1" dir="w01/A" prev={null} next="B" uselayout={no_layout}>
  <Header>An Overview of C++</Header>
  <p>
   <strong
