--- a/src/pages/w01/A/B.astro
+++ b/src/pages/w01/A/B.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
 import Header from "../../../components/Header.astro";
+const { no_layout } = Astro.props;
 ---
 
-<Layout title="Week 1" dir="w01/A" prev="A" next="C">
+<Layout title="Week 1" dir="w01/A" prev="A" next="C" uselayout={no_layout}>
  <Header>The C++ Programming Language</Header>
  <section>
   <div>
