--- a/src/pages/w01/A/D.astro
+++ b/src/pages/w01/A/D.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
 import Header from "../../../components/Header.astro";
+const { no_layout } = Astro.props;
 ---
 
-<Layout title="Week 1" dir="w01/A" prev="C" next="E">
+<Layout title="Week 1" dir="w01/A" prev="C" next="E" uselayout={no_layout}>
  <Header>Source Code</Header>
  <section>
   <p>
