--- a/src/pages/w01/A/E.astro
+++ b/src/pages/w01/A/E.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "../../../layouts/Layout.astro";
 import Header from "../../../components/Header.astro";
+const { no_layout } = Astro.props;
 ---
 
-<Layout title="Week 1" dir="w01/A" next={false} prev="D">
+<Layout title="Week 1" dir="w01/A" next={false} prev="D" uselayout={no_layout}>
  <Header>Program Mechanics</Header>
  <section>
   <p>
