--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import ChapterSideBar from "../utils/ChapterSideBar.astro";
 import SectionAside from "../utils/SectionAside.vue";
 import TopNavbar from "../utils/TopNavbar.vue";
+import DropDownNavigation from "../utils/DropDownNavigation.vue";
 // import NavigatorButtons from "../components/NavigatorButtons.vue";
 // import Breadcrumbs from "../components/Breadcrumbs.vue";
 import "../styles/global.scss";
@@ -45,16 +46,16 @@ const { title, displayLayout, chapterSubSections } = Astro.props;
       <ChapterSideBar />
      </nav>
      <div class="h-full w-full md:w-3/4 lg:w-5/6 relative">
-      <nav class="w-100 sticky top-0" id="top-navbar">
-       <TopNavbar />
+      <nav class="w-100" id="top-navbar">
+       <TopNavbar sections={chapterSubSections} />
       </nav>
-      <div class="flex  relative" id="main-content">
-       <main class="px-3 sm:p-5 h-full w-full xl:w-5/6 xl:w-4/5 overflow-auto">
+      <div class="flex relative" id="main-content">
+       <main class="px-3 sm:p-5 h-full w-full xl:w-4/5 overflow-auto">
         <section class="flex flex-col space-y-10" id="main-body">
          <slot />{" "}
         </section>
        </main>
-       <aside class="hidden xl:block w-1/6 xl:w-1/5 h-full sticky top-0 border-l-2 border-slate-300">
+       <aside class="hidden xl:block w-1/6 2xl:w-1/5 h-full sticky top-0 border-l-2 border-slate-300">
         <SectionAside sections={chapterSubSections} />
        </aside>
       </div>
