--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ hamburger_menue.addEventListener('click', function() {
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="../styles/prism.css" />
   <script src="../utils/prisms"></script>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
  </head>
