--- a/src/pages/w06/C/H.astro
+++ b/src/pages/w06/C/H.astro
@@ -3,9 +3,79 @@ import Layout from "../../../layouts/Layout.astro";
 import Header from "../../../components/Header.astro";
 const { useLayout } = Astro.props;
 ---
+
 <Layout
-title="Week 6"
-dir="w06/"
-displayLayout={useLayout}
-chapterSubSections={[]}
-><Header id="H">text</Header></Layout>
+ title="Week 6"
+ dir="w06/"
+ displayLayout={useLayout}
+ chapterSubSections={[]}
+>
+ <Header id="H">
+  <h1>Processing the Tokens</h1>
+ </Header><div>
+  <details>
+   <summary>Check Your Work Here</summary>
+   <pre
+    class="line-numbers language-cpp"><code>void inputStats(istream&amp; in, ostream&amp; out)
+&lbrace;
+   string longest_line;
+   string line;
+   int line_number = 0;
+   while (getline(in, line))
+   &lbrace;
+       line_number++;
+       if (line.size() {'>'} longest_line.size()) &lbrace;
+          longest_line = line;
+     &rbrace; 
+       istringstream str_in(line);
+       int num_tokens0&lbrace;&rbrace;;
+       string token;
+       int longest_token = 0;
+       while (str_in &gt;&gt; token)  &lbrace;
+          ++num_tokens; 
+          if (token.size() {'>'} longest_token) &lbrace;
+             longest_token = token.size();
+        &rbrace; 
+     &rbrace; 
+       out &lt;&lt; "Line " &lt;&lt; line_number &lt;&lt; " has " 
+           &lt;&lt; num_tokens &lt;&lt; " tokens (longest = " 
+           &lt;&lt; longest_token &lt;&lt; ")" &lt;&lt; endl;
+  &rbrace; 
+   out &lt;&lt; "Longest line: " &lt;&lt; longest_line &lt;&lt; endl;
+&rbrace;</code></pre>
+  </details>
+  <p class="firstLine">
+   To process and <strong>count the tokens</strong>, you must re-read each line,
+   token-by-token. To do that you must:
+  </p>
+  <ol>
+   <li>
+    Create an <strong>input string stream variable</strong> using the line.
+   </li>
+   <li>Read (and count) each <strong>token</strong> from the string stream.</li>
+  </ol>
+ </div>
+ <p>Here's the pseudocode that does this:</p>
+ <pre
+  class="pcode">str_in : istringstream(line)
+number of tokens &lt;- 0
+token : string
+while str_in &gt;&gt; token
+    number of tokens = number of tokens + 1
+Print "Line &lt;line number&gt; has &lt;number of tokens&gt; tokens . . ."</pre>
+
+ <h2>The Longest Token</h2>
+ <p>
+  To find the longest token, follow the same pattern which you used to find the
+  longest line.
+ </p>
+ <pre
+  class="pcode">longest token &lt;- 0
+while str_int &gt;&gt; token
+    if token size &gt; longest token then
+        longest token = token size</pre>
+ <p>
+  Implement this code and your function should work correctly. If you have
+  difficulty, then look at the code supplied above.
+ </p>
+</Layout>
