--- a/src/pages/w06/E/index.astro
+++ b/src/pages/w06/E/index.astro
@@ -1,4 +1,3 @@
-
 ---
 import Layout from "../../../layouts/Layout.astro";
 import A from "./A.astro";
@@ -8,11 +7,19 @@ import D from "./D.astro";
 import E from "./E.astro";
 import F from "./F.astro";
 ---
+
 <Layout
  title="CSA150 Course Reader"
  dir=""
  displayLayout={true}
- chapterSubSections={[]}
+ chapterSubSections={[
+  "Handling Errors",
+  "The Terminator",
+  "Using assert",
+  "More Assertions",
+  "Completion Codes",
+  "Error Flags",
+ ]}
 >
  <A displayLayout={false} />
  <B displayLayout={false} />
